--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.1.1",
-    "eslint": "^2.2.0",
+    "eslint": "^7.32.0",
     "istanbul": "^0.4.2",
     "lolex": "^1.5.0",
     "mocha": "^9.1.2",
@@ -43,7 +43,9 @@
   "scripts": {
     "lint": "eslint .",
     "test": "mocha ./test/test*.js --reporter spec",
-    "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec"
+    "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec",
+    "dev": "node server.js",
+    "start": "NODE_ENV=production node server.js"
   },
   "engines": {
     "node": ">=0.10.0"
