--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec",
     "dev": "node server.js",
     "start": "NODE_ENV=production node server.js"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
